Add Testing folder

--- a/.chezmoidata/folderstructure.yaml
+++ b/.chezmoidata/folderstructure.yaml
@@ -2,6 +2,7 @@ folderstructure:
   basecom:
     - basecom
     - basecom/Pimcore
+    - basecom/Pimcore/Testing
     - basecom/Pimcore/Customers
     - basecom/Pimcore/Internal
     - basecom/DevOps
